# Machinations-Agentic-LLM-Wars

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
machinations/: __init__.py  __main__.py  agents.py  board.py  config.py  display.py  engine.py  prompts.py
